2003-02-03	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added submenus to tabview contextual menu. Tabview 
      contextual menu is not built and controlled by 
      the tabview delegate.
      

2003-02-02	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added basic Applescript support. One can now write 
      Applescripts to open one or more default or addressbook 
      sessions in a new tab or window. The syntax is:
      
      To open a new session in a new tab:
      launch session "<session_name>" in tab
      
      To open a new session in a new window:
      launch session "<session_name>" in terminal
      
      The <session_name> is either the name of a stored 
      addressbook session or "default session" for a 
      default session.
      
      Here is a sample Applescript:
      
      tell application "iTerm"
	activate
	launch session "default session" in tab
	launch session "Fink list" in terminal
      end tell
      
      These scripts can then be save as executable scripts.
      
    * Incorporated a modified patch by Aaron Gerber to escape 
      special characters out of a file name when doing a 
      drag-and-drop.
      

2003-01-31	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed bug in showing cursor when going up in command 
      history
      

2003-01-30	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Removed terminal size constraints from Preferences, 
      Configuration panel, and Address Book entries. 
      Minimum size is 1x1.
      
    * We don't autoscroll to the bottom on shell output if 
      the user has scrolled up. Typing something on the 
      command line will trigger an autoscroll again.
      

2003-01-29	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Incorporated patch by Aaron Gerber to add a "Cancel" 
      button in the preferences panel.
      
    * Added preference to specify tab position:
      top, left, bottom, right
      

2003-01-27	Ujwal S. Sathyam <ujwal@setlurgroup.com>
